2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/36_AsmPlsParams.deca
// Description:
//    Programme : asm avec plusieurs params
// Resultats:
//      Programme correcte 
//
// Historique:
//    cree le 19/01/2024
class A {
    protected int x,y;
    void get(int x , int y) asm (
        "hello \' world"
    );
}