2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/34_PlusInstSurMLigne.deca
// Description:
//    tests de programme incorrect syntaxiquement ,plusieurs inst sur même ligne
//
// Resultats:
//    ligne 11 : Erreur,  mismatched input ','
//
// Historique:
//    cree le 09/01/2024
{
    "hello world", "bonjour";
}